k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatbotsocket
  labels:
    app.kubernetes.io/name: chatbotsocket
